--- a/app/src/main/res/drawable/ic_albums.xml
+++ b/app/src/main/res/drawable/ic_albums.xml
@@ -1,21 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="960"
+    android:viewportHeight="960">
   <path
-      android:pathData="M19.647,8.25H4.353C3.606,8.25 3,8.856 3,9.603V18.897C3,19.644 3.606,20.25 4.353,20.25H19.647C20.394,20.25 21,19.644 21,18.897V9.603C21,8.856 20.394,8.25 19.647,8.25Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
-  <path
-      android:pathData="M6.75,3.75H17.25ZM5.25,6H18.75Z"
-      android:fillColor="#000000"/>
-  <path
-      android:pathData="M6.75,3.75H17.25M5.25,6H18.75"
-      android:strokeWidth="1.5"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
+      android:pathData="M480,660q75,0 127.5,-52.5T660,480q0,-75 -52.5,-127.5T480,300q-75,0 -127.5,52.5T300,480q0,75 52.5,127.5T480,660ZM480,520q-17,0 -28.5,-11.5T440,480q0,-17 11.5,-28.5T480,440q17,0 28.5,11.5T520,480q0,17 -11.5,28.5T480,520ZM480,880q-83,0 -156,-31.5T197,763q-54,-54 -85.5,-127T80,480q0,-83 31.5,-156T197,197q54,-54 127,-85.5T480,80q83,0 156,31.5T763,197q54,54 85.5,127T880,480q0,83 -31.5,156T763,763q-54,54 -127,85.5T480,880ZM480,800q134,0 227,-93t93,-227q0,-134 -93,-227t-227,-93q-134,0 -227,93t-93,227q0,134 93,227t227,93ZM480,480Z"
+      android:fillColor="#e8eaed"/>
 </vector>
